# db2i-agents

./: .gitignore  README-ENV.md  README.md  TODO.md  agent.py  env.sample  logo.py  main.py  pyproject.toml  setup_env.py
.github/workflows/: publish-python.yml
concepts/: README.md  pyproject.toml
concepts/agents/: travel_agent.py
concepts/observability/: get_weather_weave.py  test_weave.py
concepts/reasoning/: README.md  pyproject.toml  reasoning_tools.py
concepts/tools/: get_weather_agno.py  get_weather_raw.py  hitl.py
config/: env.sample
examples/: .env.sample  README.md  cpu_network_correlation.sql  examples_playground.py  hitl.py  pyproject.toml  setup_env.sh  test_arize.py
examples/agents/: README.md
examples/agents-infra/: CLI_README.md  Dockerfile  README.md  cli.py  compose.yaml  env.example  pyproject.toml  requirements.txt  simple_test.py
examples/agents-infra/agents/: agno_assist.py  web_agent.py
examples/agents-infra/agents/performance/: metrics_assistant.py
examples/agents-infra/agents/sample/: employee_info.py
examples/agents-infra/agents/security/: security_assistant.py
examples/agents-infra/agents/services/ifs/: storage_assistant.py
examples/agents-infra/agents/services/ptf/: ptf_assistant.py
examples/agents-infra/app/: config.yaml  main.py
examples/agents-infra/db/: factory.py  ibmi.py
examples/agents-infra/reports/: performance_snapshot_2025-10-31_15-01.txt
examples/agents-infra/scripts/: build_image.sh
examples/agents-infra/teams/: ibmi_teams.py
examples/agents-infra/utils/: model_selector.py  watsonx.py
examples/agents-infra/workflows/: ibmi_workflows.py  workflow_agents.py  workflow_functions.py
examples/agents/agno/: .env.sample  README.md  agent.py  cli.py  db2i_playground.py  example.py  mapepire_ai.py  pyproject.toml  reasoning_tools.py  wx.py
examples/agents/agno/agent-ui/: package-lock.json
examples/agents/agno/python/: README.md
examples/agents/agno/typescript/: README.md
examples/agents/agno/utils/: cli.py
examples/agents/audit/: agent.py
examples/agents/audit/sql/: Agentic - Additional health checks.sql  health_checks.json
examples/agents/crewai/python/: README.md
examples/agents/crewai/typescript/: README.md
examples/agents/langchain/: .env.sample  README.md  db2i_agent.ipynb  db2i_simple_agent.ipynb  main.py  pyproject.toml  test_app.py
examples/agents/langchain/app/: .env.example
examples/agents/langchain/app/src/react_agent/: db2i_tools.py  prompt.py  test_database.py  tools.py
examples/agents/langchain/db2i_tools/: prompt.py  test_database.py  tools.py
examples/agents/langchain/tools/: database.py  test_database.py  tools.py
examples/agents/mcp/python/: README.md
examples/agents/mcp/typescript/: README.md
examples/agents/performance/: README.md  example_agent.py  metrics_assistant.py  metrics_assistant_cli.py  metrics_golf.py  sql_examples_rag.py
examples/agents/performance/reports/: system_performance_report.md
examples/agents/sample/: README.md  get_employee_info_agent.py  get_employee_info_workflow.py
examples/agents/security/: README.md  agent.py  playground.py  security_assistant.py  test_security_assistant.ipynb
examples/agents/security/sql/: ACS insert from examples may28-2025.sql  User profiles exposed to attack and corrective measures.sql
examples/agents/services/: README.md  service_collection.json  service_names.json  sql_services_agent.py  sql_services_info.ipynb
examples/agents/services/ifs/: read_stream_file.py  storage_assistant.py
examples/agents/services/java/: jvm_assistant.py
examples/agents/services/ptf/: get_ptf_info.py  get_ptf_info_extended.py  get_ptf_info_golf.py
examples/apps/sql_agent/: Db2iTools.py  README.md  agents.py  app.py  cli.py  db2i_tools.py  pyproject.toml  test.py  utils.py
examples/apps/sql_agent/knowledge/sample/: ACT.txt  CL_SCHED.txt  DEPARTMENT.txt  EMPLOYEE.txt  EMPPROJACT.txt  PROJACT.txt  SALES.txt  sample_queries.sql
examples/apps/sql_agent/knowledge/tables/: EMP_PHOTO.txt  EMP_RESUME.txt  IN_TRAY.txt
examples/apps/sql_agent_with_knowledge/: README.md  agent.py  load_knowledge.py
examples/apps/sql_agent_with_knowledge/knowledge/tables/: ORG.txt  PROJECT.txt  STAFF.txt
examples/apps/sql_agent_with_knowledge/prompts/: instructions.md
examples/apps/sql_agent_with_knowledge/scripts/: run_pgvector.sh
examples/ibmi-services/: README.md  sql_service_info.ipynb
examples/ibmi-services/ifs/: storage_assistant.py
examples/ibmi-services/java/: jvm_assistant.py
examples/ibmi-services/ptf/: get_ptf_info.py  get_ptf_info_extended.py  get_ptf_info_golf.py  pyproject.toml
examples/mcp/: README.md
examples/mcp/db2i-mcp-server/: README.md  client.py  pyproject.toml
examples/mcp/db2i-mcp-server/src/db2i_mcp_server/: server.py
examples/performance/: README.md  metrics_assistant.py  metrics_assistant_cli.py  pyproject.toml
examples/sample/: README.md  get_employee_info.py  mcp_simple.py  pyproject.toml
examples/security/: README.md  agent.py  playground.py  pyproject.toml  security_assistant.py
examples/security/sql/: Inject more security into your IBM i.sql  User profiles exposed to attack and corrective measures.sql
examples/shared/src/db2i_shared_utils/: cli.py
examples/sql_services/: pyproject.toml  sql_services_agent.py
frameworks/: README.md
frameworks/agents/agno/: .env.sample  README.md  agent.py  agent_simple.py  db2i_playground.py  mapepire_ai.py  pyproject.toml
frameworks/agents/langchain/: README.md  db2i_graph_agent.ipynb  db2i_simple_agent.ipynb  main.py  pyproject.toml  test.py
frameworks/agents/langchain/app/: pyproject.toml
frameworks/agents/langchain/app/src/react_agent/: database.py  graph.py  test_database.py  toolkit.py
frameworks/agents/langchain/db2i-tools/: main.py  pyproject.toml
frameworks/agents/langchain/db2i-tools/src/db2i_tools/: test_database.py
frameworks/agents/langchain/db2i_tools/: toolkit.py
frameworks/mcp/: README.md
shared/: README.md  pyproject.toml
shared/src/db2i_shared_utils/: cli.py
shared/tests/: test_cli.py
(+6 files in other folders)
