[project]
name = "concepts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.4.6",
    "duckduckgo-search>=8.0.2",
    "ibm-watsonx-ai>=1.3.13",
    "mapepire-python>=0.2.0",
    "mcp>=1.8.1",
    "ollama>=0.4.8",
    "openai>=1.78.1",
    "prompt-toolkit>=3.0.51",
    "pydantic>=2.12.4",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.40",
    "weave>=0.51.47",
]
