[project]
name = "examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno[infra]==2.1.4",
    "anthropic>=0.54.0",
    "arize-phoenix>=11.32.1",
    "beautifulsoup4>=4.13.5",
    "db2-shared-utils",
    "db2i-tools",
    "ddgs>=9.5.5",
    "duckduckgo-search>=8.1.1",
    "fastapi[standard]>=0.115.12",
    "googlesearch-python>=1.3.0",
    "ipykernel>=6.29.5",
    "mapepire-python>=0.2.0",
    "mcp>=1.9.3",
    "ollama>=0.5.1",
    "openai>=1.86.0",
    "openinference-instrumentation-agno>=0.1.14",
    "opentelemetry-exporter-otlp>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "pycountry>=24.6.1",
    "rich>=14.0.0",
    "weave>=0.51.52",
    "yfinance>=0.2.65",
]

[tool.uv.sources]
db2-shared-utils = { path = "../shared", editable = true }
db2i-tools = { path = "../frameworks/agents/langchain/db2i-tools", editable = true }
