[project]
name = "db2-shared-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.6.0",
    "ibm-watsonx-ai>=1.3.13",
    "ollama>=0.4.8",
    "openai>=1.78.1",
    "prompt-toolkit>=3.0.51",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.40",
]
