[project]
name = "performance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "db2-shared-utils",
    "mapepire-python>=0.2.0",
    "mcp>=1.9.3",
]

[tool.uv.sources]
db2-shared-utils = { path = "../shared", editable = true }
