[project]
name = "sample"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.5.0",
    "db2-shared-utils",
    "db2i-tools",
    "mapepire-python>=0.2.0",
    "mcp>=1.8.1",
    "ollama>=0.4.8",
    "sqlalchemy>=2.0.40",
]

[tool.uv.sources]
db2-shared-utils = { path = "../shared", editable = true }
db2i-tools = { path = "../../frameworks/agents/langchain/db2i-tools", editable = true }

