[project]
name = "security"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "agno==1.5.0",
    "db2-shared-utils",
    "fastapi[standard]>=0.115.12",
    "ipykernel>=6.29.5",
    "mapepire-python>=0.2.0",
    "mcp>=1.9.3",
    "openai>=1.84.0",
]

[tool.uv.sources]
db2-shared-utils = { path = "../shared", editable = true }
