[project]
name = "sql-services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.5.8",
    "db2-shared-utils",
    "ipykernel>=6.29.5",
    "mapepire-python>=0.2.0",
    "mcp>=1.9.2",
    "ollama>=0.5.1",
    "openai>=1.84.0",
]

[tool.uv.sources]
db2-shared-utils = { path = "../shared", editable = true }
