[project]
name = "agno-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.2.1",
    "duckduckgo-search>=7.5.3",
    "exa-py>=1.9.1",
    "ibm-watsonx-ai>=1.3.1",
    "lancedb>=0.21.1",
    "lxml-html-clean>=0.4.1",
    "newspaper4k>=0.9.3.1",
    "ollama>=0.4.7",
    "openai>=1.68.2",
    "pypdf>=5.4.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.39",
    "tantivy>=0.22.2",
    "yfinance>=0.2.55",
]

[tool.uv.workspace]
members = ["test", "test-no-package"]
