[project]
name = "langchain_db2i"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "langchain>=0.3.20",
    "langchain-anthropic>=0.3.9",
    "langchain-core>=0.3.43",
    "langchain-ollama>=0.2.3",
    "langchainhub>=0.1.21",
    "langgraph>=0.3.5",
    "mapepire-python>=0.2.0",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
]
